# HJB_Discretization

mc_onecontrol/: AUTHORS  configure.ac
mc_onecontrol/m4/: gsl.m4
mc_onecontrol/src/: Makefile.am  markovchain.cpp  problem_calloption.lua  problem_indiffpricing.lua  solverexplicitgm.cpp  solverimplicitbm.cpp
mc_onecontrol_local_opt/: configure.ac  libtool
mc_onecontrol_local_opt/src/: Makefile.am  call_option.lua  call_option_conf.lua  markovchain.cpp  problem.lua  problem_calloption.lua  problem_indiffpricing.lua  problem_riskaversion.lua  problemcalloption.cpp  problemindiffpricing.cpp  problemlua.cpp  solverexplicitgm.cpp  solverimplicitbm.cpp
mc_onecontrol_local_opt/src/markovsolverlib/: problem.cpp  problem.h
mc_onecontrol_local_opt_slip/: configure.ac
mc_onecontrol_local_opt_slip/src/: Makefile.am  markovchain.cpp  problem_calloption.lua  problem_employee.lua  problem_indiffpricing.lua  problemindiffpricing.cpp  solverimplicitbm.cpp
mc_onecontrol_local_opt_slip/src/markovsolverlib/: Makefile.am  solver.cpp  solver.h
mctwodim_onecontrol_local_opt/: configure.ac  libtool
mctwodim_onecontrol_local_opt/src/: Makefile.am  markovchain.cpp  solver.cpp
